--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -1,61 +1,19 @@
 {
-    "configuration": {
-        "schema": {
-		"__manifest": {
-			"type": "array",
-			"properties": {
-				"file_name": {
-					"type": "string"
-				},
-				"file_size": {
-					"type": "integer"
-				}
-			}
-		},
-            "commons_url": {},
-	    "tags": {
-		    "type": "array"
-	    },
-	    "study_description_summary": {},
-	    "project_title": {}
-        },
-	"settings" : {
-		"cache_drs" : true
-	}
-    },
-    "adapter_commons": {
+    "gen3_commons": {
         "HEAL": {
             "mds_url": "https://qa-heal.planx-pla.net/",
-            "commons_url": "https://qa-heal.planx-pla.net/",
-            "adapter": "gen3",
-            "keep_original_fields": false,
-            "field_mappings": {
-		"authz": "path:authz",
-		"tags": "path:tags",
-		"study_description_summary": "path:study_description_summary",
-		"manifest": "path:__manifest",
-		"project_title": "path:project_title",
-                "commons_url": "https://qa-heal.planx-pla.net/"
-            }
+            "commons_url": "https://qa-heal.planx-pla.net/"
         },
         "SAMHDA": {
             "mds_url": "https://qa-heal.planx-pla.net/",
             "commons_url": "https://qa-heal.planx-pla.net",
-            "adapter": "gen3",
-            "keep_original_fields": false,
             "select_field": {
                 "field_name": "data_resource",
                 "field_value": "SAMHDA"
-            },
-            "field_mappings": {
-		"authz": "path:authz",
-                "tags": "path:tags",
-                "study_description_summary": "path:study_description_summary",
-                "manifest": "path:__manifest",
-                "project_title": "path:project_title",
-                "commons_url": "https://qa-heal.planx-pla.net/"
             }
-        },
+        }
+    },
+    "adapter_commons": {	
         "ICPSR": {
             "mds_url": "https://www.icpsr.umich.edu/icpsrweb/neutral/oai/studies",
             "commons_url": "https://www.icpsr.umich.edu",
