--- a/qa-canine.planx-pla.net/manifest.json
+++ b/qa-canine.planx-pla.net/manifest.json
@@ -7,22 +7,22 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "arborist": "quay.io/cdis/arborist:2020.03",
+    "arborist": "quay.io/cdis/arborist:master",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
-    "fence": "quay.io/cdis/fence:2020.03",
-    "indexd": "quay.io/cdis/indexd:2020.03",
-    "peregrine": "quay.io/cdis/peregrine:2020.03",
-    "pidgin": "quay.io/cdis/pidgin:2020.03",
+    "fence": "quay.io/cdis/fence:master",
+    "indexd": "quay.io/cdis/indexd:master",
+    "peregrine": "quay.io/cdis/peregrine:master",
+    "pidgin": "quay.io/cdis/pidgin:master",
     "revproxy": "quay.io/cdis/nginx:1.17.6-ctds-1.0.1",
-    "sheepdog": "quay.io/cdis/sheepdog:2020.03",
-    "portal": "quay.io/cdis/data-portal:2020.03",
+    "sheepdog": "quay.io/cdis/sheepdog:master",
+    "portal": "quay.io/cdis/data-portal:master",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "jupyterhub": "quay.io/occ_data/jupyterhub:master",
-    "spark": "quay.io/cdis/gen3-spark:2020.03",
-    "tube": "quay.io/cdis/tube:2020.03",
-    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2020.03",
-    "guppy": "quay.io/cdis/guppy:2020.03",
-    "sower": "quay.io/cdis/sower:2020.03",
+    "spark": "quay.io/cdis/gen3-spark:master",
+    "tube": "quay.io/cdis/tube:master",
+    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:master",
+    "guppy": "quay.io/cdis/guppy:master",
+    "sower": "quay.io/cdis/sower:master",
     "dashboard": "quay.io/cdis/gen3-statics:master",
     "metadata": "quay.io/cdis/metadata-service:master"
   },
