--- a/qa-bloodpac.planx-pla.net/manifest.json
+++ b/qa-bloodpac.planx-pla.net/manifest.json
@@ -40,10 +40,81 @@
   },
   "sower": [
     {
+      "name": "ingest-metadata-manifest",
+      "action": "ingest-metadata-manifest",
+      "activeDeadlineSeconds": 86400,
+      "serviceAccountName": "jobs-data-bloodpac-org",
+      "container": {
+        "name": "job-task",
+        "image": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/metadata-manifest-ingestion:2022.08",
+        "pull_policy": "Always",
+        "env": [
+          {
+            "name": "GEN3_HOSTNAME",
+            "valueFrom": {
+              "configMapKeyRef": {
+                "name": "manifest-global",
+                "key": "hostname"
+              }
+            }
+          }
+        ],
+        "volumeMounts": [
+          {
+            "name": "creds-volume",
+            "readOnly": true,
+            "mountPath": "/creds.json",
+            "subPath": "creds.json"
+          }
+        ],
+        "cpu-limit": "1",
+        "memory-limit": "1Gi"
+      },
+      "volumes": [
+        {
+          "name": "creds-volume",
+          "secret": {
+            "secretName": "sower-jobs-g3auto"
+          }
+        }
+      ],
+      "restart_policy": "Never"
+    },
+    {
+      "name": "get-dbgap-metadata",
+      "action": "get-dbgap-metadata",
+      "serviceAccountName": "jobs-data-bloodpac-org",
+      "container": {
+        "name": "job-task",
+        "image": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/get-dbgap-metadata:2022.08",
+        "pull_policy": "Always",
+        "env": [],
+        "volumeMounts": [
+          {
+            "name": "creds-volume",
+            "readOnly": true,
+            "mountPath": "/creds.json",
+            "subPath": "creds.json"
+          }
+        ],
+        "cpu-limit": "1",
+        "memory-limit": "1Gi"
+      },
+      "volumes": [
+        {
+          "name": "creds-volume",
+          "secret": {
+            "secretName": "sower-jobs-g3auto"
+          }
+        }
+      ],
+      "restart_policy": "Never"
+    },
+    {
       "name": "manifest-indexing",
       "action": "index-object-manifest",
       "activeDeadlineSeconds": 86400,
-      "serviceAccountName": "jobs-qa-bloodpac-planx-pla-net",
+      "serviceAccountName": "jobs-data-bloodpac-org",
       "container": {
         "name": "job-task",
         "image": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/manifest-indexing:2022.08",
@@ -79,47 +150,172 @@
         }
       ],
       "restart_policy": "Never"
+    },
+    {
+      "name": "manifest-merging",
+      "action": "merge-manifests",
+      "activeDeadlineSeconds": 86400,
+      "serviceAccountName": "jobs-data-bloodpac-org",
+      "container": {
+        "name": "job-task",
+        "image": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/cdis/manifest-merging:2022.08",
+        "pull_policy": "Always",
+        "env": [
+          {
+            "name": "GEN3_HOSTNAME",
+            "valueFrom": {
+              "configMapKeyRef": {
+                "name": "manifest-global",
+                "key": "hostname"
+              }
+            }
+          }
+        ],
+        "volumeMounts": [
+          {
+            "name": "sower-jobs-creds-volume",
+            "readOnly": true,
+            "mountPath": "/creds.json",
+            "subPath": "creds.json"
+          }
+        ],
+        "cpu-limit": "1",
+        "memory-limit": "1Gi"
+      },
+      "volumes": [
+        {
+          "name": "sower-jobs-creds-volume",
+          "secret": {
+            "secretName": "sower-jobs-g3auto"
+          }
+        }
+      ],
+      "restart_policy": "Never"
+    },
+    {
+      "name": "indexd-manifest",
+      "action": "download-indexd-manifest",
+      "activeDeadlineSeconds": 86400,
+      "serviceAccountName": "jobs-data-bloodpac-org",
+      "container": {
+        "name": "job-task",
+        "image": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/download-indexd-manifest:2022.08",
+        "pull_policy": "Always",
+        "env": [
+          {
+            "name": "GEN3_HOSTNAME",
+            "valueFrom": {
+              "configMapKeyRef": {
+                "name": "manifest-global",
+                "key": "hostname"
+              }
+            }
+          }
+        ],
+        "volumeMounts": [
+          {
+            "name": "sower-jobs-creds-volume",
+            "readOnly": true,
+            "mountPath": "/creds.json",
+            "subPath": "creds.json"
+          }
+        ],
+        "cpu-limit": "1",
+        "memory-limit": "1Gi"
+      },
+      "volumes": [
+        {
+          "name": "sower-jobs-creds-volume",
+          "secret": {
+            "secretName": "sower-jobs-g3auto"
+          }
+        }
+      ],
+      "restart_policy": "Never"
     }
   ],
+  "jupyterhub": {
+    "enabled": "yes",
+    "nb_storage_size": "250Gi",
+    "sidecar": "quay.io/cdis/gen3fuse-sidecar:2022.05",
+    "containers": [
+      {
+        "name": "Bioinfo - Python/R",
+        "cpu": 0.5,
+        "memory": "256M",
+        "image": "quay.io/occ_data/jupyternotebook:1.7.4"
+      },
+      {
+        "name": "Bioinfo - Python/R",
+        "cpu": 1,
+        "memory": "1024M",
+        "image": "quay.io/occ_data/jupyternotebook:1.7.4"
+      },
+      {
+        "name": "Bioinfo - Python/R",
+        "cpu": 6,
+        "memory": "15512M",
+        "image": "quay.io/occ_data/jupyternotebook:1.7.4"
+      },
+      {
+        "name": "Bioinfo - Python/R-3.6",
+        "cpu": 0.5,
+        "memory": "256M",
+        "image": "quay.io/occ_data/jupyternotebook:1.8.0"
+      },
+      {
+        "name": "Bioinfo - Python/R-3.6",
+        "cpu": 1,
+        "memory": "1024M",
+        "image": "quay.io/occ_data/jupyternotebook:1.8.0"
+      },
+      {
+        "name": "Bioinfo - Python/R-3.6",
+        "cpu": 6,
+        "memory": "15512M",
+        "image": "quay.io/occ_data/jupyternotebook:1.8.0"
+      }
+    ]
+  },
   "peregrine": {
     "sidecar": "True"
   },
   "guppy": {
     "indices": [
       {
-        "index": "qa-bloodpac.planx-pla.net_study",
+        "index": "bloodpac_study",
         "type": "study"
       },
       {
-        "index": "qa-bloodpac.planx-pla.net_case",
+        "index": "bloodpac_case",
         "type": "case"
       },
       {
-        "index": "qa-bloodpac.planx-pla.net_medical_history",
+        "index": "bloodpac_medical_history",
         "type": "medical_history"
       },
       {
-        "index": "qa-bloodpac.planx-pla.net_biospecimen",
+        "index": "bloodpac_biospecimen",
         "type": "biospecimen"
       },
       {
-        "index": "qa-bloodpac.planx-pla.net_aliquot",
+        "index": "bloodpac_aliquot",
         "type": "aliquot"
       },
       {
-        "index": "qa-bloodpac.planx-pla.net_read_group",
+        "index": "bloodpac_read_group",
         "type": "read_group"
       },
       {
-        "index": "qa-bloodpac.planx-pla.net_publication",
+        "index": "bloodpac_publication",
         "type": "publication"
       },
       {
-        "index": "qa-bloodpac.planx-pla.net_file",
+        "index": "bloodpac_file",
         "type": "file"
       }
     ],
-    "config_index": "qa-bloodpac.planx-pla.net_array-config",
+    "config_index": "bloodpac_array-config",
     "auth_filter_field": "auth_resource_path"
   },
   "global": {
@@ -132,10 +328,7 @@
     "dispatcher_job_num": "10",
     "sync_from_dbgap": "False",
     "public_datasets": true,
-    "netpolicy": "on",
-    "kube_bucket": "kube-qaplanetv1-gen3",
-    "logs_bucket": "logs-qaplanetv1-gen3",
-    "lb_type": "internal"
+    "netpolicy": "on"
   },
   "canary": {
     "default": 0
