--- a/qa-brh.planx-pla.net/manifest.json
+++ b/qa-brh.planx-pla.net/manifest.json
@@ -17,7 +17,7 @@
     "indexd": "quay.io/cdis/indexd:2022.06",
     "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master",
     "manifestservice": "quay.io/cdis/manifestservice:2022.06",
-    "metadata": "quay.io/cdis/metadata-service:BRH-1.0.0",
+    "metadata": "quay.io/cdis/metadata-service:2022.08",
     "peregrine": "quay.io/cdis/peregrine:2022.06",
     "pidgin": "quay.io/cdis/pidgin:2022.06",
     "portal": "quay.io/cdis/data-portal:4.0.0",
