--- a/qa-brh.planx-pla.net/manifest.json
+++ b/qa-brh.planx-pla.net/manifest.json
@@ -19,6 +19,7 @@
     "manifestservice": "quay.io/cdis/manifestservice:2022.06",
     "metadata": "quay.io/cdis/metadata-service:2022.08",
     "peregrine": "quay.io/cdis/peregrine:2022.06",
+    "pidgin": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/pidgin:2022.08",
     "portal": "quay.io/cdis/data-portal:4.0.0",
     "requestor": "quay.io/cdis/requestor:1.7.1",
     "revproxy": "quay.io/cdis/nginx:2022.06",
