--- a/qa-ibd.planx-pla.net/manifest.json
+++ b/qa-ibd.planx-pla.net/manifest.json
@@ -1,7 +1,7 @@
 {
   "notes": [
     "This is the qa environment manifest",
-    "That's all I have to say"
+    "That's all I have to say."
   ],
   "versions": {
     "arborist": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/arborist:2022.10",
