--- a/qa-brh.planx-pla.net/manifest.json
+++ b/qa-brh.planx-pla.net/manifest.json
@@ -8,23 +8,23 @@
   },
   "versions": {
     "ambassador": "quay.io/datawire/ambassador:1.4.2",
-    "arborist": "quay.io/cdis/arborist:2022.06",
+    "arborist": "quay.io/cdis/arborist:2022.09",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:v1.3.1",
-    "dashboard": "quay.io/cdis/gen3-statics:2022.06",
-    "fence": "quay.io/cdis/fence:2022.06",
+    "dashboard": "quay.io/cdis/gen3-statics:2022.09",
+    "fence": "quay.io/cdis/fence:2022.09",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
-    "hatchery": "quay.io/cdis/hatchery:1.0.0",
-    "indexd": "quay.io/cdis/indexd:2022.06",
-    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:0.1.1",
-    "manifestservice": "quay.io/cdis/manifestservice:2022.06",
-    "metadata": "quay.io/cdis/metadata-service:BRH-1.0.0",
-    "peregrine": "quay.io/cdis/peregrine:2022.06",
-    "pidgin": "quay.io/cdis/pidgin:2022.06",
-    "portal": "quay.io/cdis/data-portal:5.0.0",
-    "requestor": "quay.io/cdis/requestor:1.7.1",
-    "revproxy": "quay.io/cdis/nginx:2022.06",
-    "sheepdog": "quay.io/cdis/sheepdog:2022.06",
-    "wts": "quay.io/cdis/workspace-token-service:0.4.1"
+    "hatchery": "quay.io/cdis/hatchery:2022.09",
+    "indexd": "quay.io/cdis/indexd:2022.09",
+    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:2022.09",
+    "manifestservice": "quay.io/cdis/manifestservice:2022.09",
+    "metadata": "quay.io/cdis/metadata-service:2022.09",
+    "peregrine": "quay.io/cdis/peregrine:2022.09",
+    "pidgin": "quay.io/cdis/pidgin:2022.09",
+    "portal": "quay.io/cdis/data-portal:2022.09",
+    "requestor": "quay.io/cdis/requestor:2022.09",
+    "revproxy": "quay.io/cdis/nginx:2022.09",
+    "sheepdog": "quay.io/cdis/sheepdog:2022.09",
+    "wts": "quay.io/cdis/workspace-token-service:2022.09"
   },
   "arborist": {
     "deployment_version": "2"
